kong/ingress/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: tg-ingress
 namespace: kong
 annotations:
   konghq.com/strip-path: "false"
  #  konghq.com/plugins: <auth-plugin-name>, <ratelimit-plugin-name>    # Plugin names referenced in KongPlugin resources
   kubernetes.io/ingress.class: kong
   konghq.com/methods: "GET, POST"  
spec:
 ingressClassName: kong
 tls:
    - hosts:
        - localhost   # Or your local domain if you're using one like dev.tgbackend.local
      secretName: kong-tls-cert  # Must match the name of the secret you created
 rules:
   - http:
       paths:
         - path: /ping
           pathType: Prefix
           backend:
             service:
               name: tg-ingress-api   # Name of your K8s Service
               port:
                 number: 80    # Port exposed by your Service
